app/static/style.css
/* ... */
.landing-feature {
    background-color: #a2a2a2;
    background-image: url("img/img-3-feature-developers.jpg");
    animation: animation: features_transition 2s ease-in;
    -webkit-animation: features_transition 2s ease-in; /* Chrome, Safari, Opera */
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 10rem;
    padding-bottom: 6rem;
    height:650px;
}

.landing-feature h2,
.landing-feature .h2-alternative,
.landing-feature p {
    color: #FFF;
}

.landing-feature a {
    outline: 0;
}

.landing-feature__header {
    padding-bottom: 1.5rem;
}

.landing-feature h2,
.landing-feature .h2-alternative {
    font-weight: 400;
}

.landing-feature h2 span,
.landing-feature .h2-alternative span {
    font-weight: 700;
}

.landing-feature__text {
    margin: 0 auto;
    max-width: 36rem;
    padding-bottom: 4rem;
    height: 14rem;
}

.landing-feature__item {
    padding-top: 7rem;
}

.landing-feature__img {
    margin: 0 auto;
    height: 4rem;
    width: 4rem;
    margin-bottom: 1rem;
    border-radius: 100px;
    background-color: #c5c4cf;
    cursor: pointer;
}
.landing-feature__img.selected {
    background-color: #1DD069;
}
.landing-feature__img img {
    height: 2.5rem;
    margin-top: .5rem;
}
.landing-feature__description span {
    font-size: 15pt;
    color: #FFF;
}
.landing-feature__description.selected {
    font-weight: 700;
}
.landing-feature__item.active .landing-feature__img {
    background-color: #1DD069;
}
.landing-feature__item.active a {
    font-weight: 700;
}


.landing-feature__arrow div {
    margin: 0 auto;
}
.landing-feature__arrow img {
    width: 2rem;
}


/* smaller and medium screens */
@media only screen and (max-width: 1024px) {
    .landing-feature {
        padding-top: 8rem;
        padding-bottom: 4rem;
    }
}

/* smaller screens */
@media only screen and (max-width: 640px) {
    .landing-feature {
        padding-top: 10rem;
        padding-bottom: 4rem;
        display: flex;
        align-items: center;
    }

    .landing-feature__text {
        padding-bottom: 0rem;
        height: 6rem;
    }
}


.landing-progress {
    background-image: url("background/bg-4-progress-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 5rem;
    display: flex;
    justify-content: space-evenly;

}

.landing-maps {
    background-image: url("background/bg-2-maps-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
}

.landing-maps__header {
    color: #ffffff;
}

.landing-maps__header h3 {
    padding-bottom: 6rem;
}

.landing-maps__header h3 span {
    font-weight: 700;
}

.landing-maps__image .cta {
    margin: 0 auto;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.landing-maps__image div {
    height: 27rem;
    width: 62rem;
    margin: 0 auto;
    padding-top: 4rem;
    background-image: url(../static/img/img-17-explore-map-min.jpg);
    background-repeat: no-repeat;
    background-position: center top;
    background-size: cover;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
}

/* smaller screens */
@media only screen and (max-width: 640px) {

    .landing-maps__header h3 {
        padding-bottom: 1rem!important;
    }
}

.landing-dashboards {
    background-image: url("background/bg-6-minigridmonitor.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
}

.landing-dashboards__header {
    color: #ffffff;
}

.landing-dashboards__header p {
    padding-bottom: 6rem;
    color: #ffffff;
}

.landing-dashboards__header p span {
    font-weight: 700;
}

.landing-dashboards__image .cta {
    margin: 0 auto;
    padding-top: 1rem;
    padding-bottom: 1rem;
}




.landing-dashboards__image div {
    height: 14rem;
    width: 100%;
    margin: 0 auto;
    padding-top: 4rem;
    background-color: #085064;
    background-image: url(../static/img/img-18-datadashboard.png);
    background-repeat: no-repeat;
    background-position: center top;
    background-size: cover;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
    box-shadow: 4px 6px 16px 0px rgba(0,0,0,0.75);
}

.landing-dashboards__image.minigrid div {
    background-image: url(../static/img/img-16-minigridmonitor.png);
}



@media only screen and (min-width: 1024px) {

    .puffer-left{
        padding-left: 5%;
    }

    .puffer-right{
        padding-right: 5%;
    }
}

@media only screen and (min-width: 1024px) and (max-width: 1300px) {

    .landing-dashboards__image div{
       height: 12rem;
    }

}


@media only screen and (max-width: 1023px) {

.landing-dashboards__image.puffer-right{

}

}
.tooltip{
    max-width: 45rem;
}


@media only screen and (min-width: 641px) and (max-width: 1023px) {
    .small-offset-2 {
        margin-left: 0%;
    }
    .landing-maps__image div, .landing-dashboards__image div{
        width: 90%;
    }

    .landing-dashboards__header p {
        padding-bottom: 3.5rem;
    }

}

/* smaller screens */
@media only screen and (max-width: 640px) {
    .landing-maps__image div, .landing-dashboards__image div{
        height: auto!important;
        width: 80%;
    }

    .landing-dashboards__header p {
        padding-bottom: 2rem;
    }
}

h3.dashboard-plot-title {

    padding-left: 2.5rem;
    padding-right: 2.5rem;
    font-weight: bold;
    margin-bottom: 3rem;
}
.dashboard-plot-title img {
    padding-left: 0.75rem;
    vertical-align: initial;
    border: none; /* disable the underlining of the tooltip*/
}


.dashboard-plot-area {
    padding-top: 1.5rem;
    margin-bottom: 2.5rem;
        box-shadow: 5px 3px 5px 0px rgba(0,0,0,0.41);
    -webkit-box-shadow: 5px 3px 5px 0px rgba(0,0,0,0.41);
    -moz-box-shadow: 5px 3px 5px 0px rgba(0,0,0,0.41);
    background-color: white;
}
/* ... */

